# orthogon

./: .gitignore  Actor.cpp  Actor.h  Actor.hpp  Angle.cpp  Angle.h  Animation.cpp  Animation.h  Animation.hpp  CMakeLists.txt  DottedPath.cpp  DottedPath.h  DottedPath.hpp  ImageRef.cpp  ImageRef.h  ImageRef.hpp  JumpTest.cpp  LICENSE  Main.cpp  Path.cpp  Path.h  Path.hpp  Player.cpp  Player.h  Player.hpp  PlayerMotion.cpp  PlayerMotion.hpp  PlayerState.cpp  PlayerState.hpp  README.md  TiledImage.cpp  TiledImage.h  TiledImage.hpp  VectorHelper.h  sprites.txt
TestSuite/: CMakeLists.txt  Game_Test.cpp
